Refactor to enhance global exception handling for API responses
Created a base exception that the custom exception classes extend for unified behavior.

Updated GlobalExceptionHandler to improve error message standardization